--- a/ch5/Whereami/Whereami/Whereami/Base.lproj/Main.storyboard
+++ b/ch5/Whereami/Whereami/Whereami/Base.lproj/Main.storyboard
@@ -24,11 +24,11 @@
                                 </connections>
                             </mapView>
                             <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="bwC-zC-Pjr">
-                                <rect key="frame" x="150" y="58" width="20" height="20"/>
+                                <rect key="frame" x="150" y="102" width="20" height="20"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </activityIndicatorView>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Location Name" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="aiD-60-ouU">
-                                <rect key="frame" x="70" y="20" width="180" height="30"/>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Location Name" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="aiD-60-ouU">
+                                <rect key="frame" x="70" y="64" width="180" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="4Em-h8-K2b"/>
@@ -40,16 +40,30 @@
                                     <outlet property="delegate" destination="vXZ-lx-hvc" id="u6A-Wh-pgc"/>
                                 </connections>
                             </textField>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="RmI-pd-8Y7">
+                                <rect key="frame" x="65" y="28" width="191" height="29"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <segments>
+                                    <segment title="Map"/>
+                                    <segment title="Satellite"/>
+                                    <segment title="Hybrid"/>
+                                </segments>
+                                <connections>
+                                    <action selector="mapTypeChanged:" destination="vXZ-lx-hvc" eventType="valueChanged" id="KYl-Xc-IQB"/>
+                                </connections>
+                            </segmentedControl>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="DBb-Ln-kL2" secondAttribute="trailing" id="2TP-v3-hyl"/>
                             <constraint firstItem="bwC-zC-Pjr" firstAttribute="top" secondItem="aiD-60-ouU" secondAttribute="bottom" constant="8" id="6lu-Mw-hhe"/>
+                            <constraint firstItem="RmI-pd-8Y7" firstAttribute="top" secondItem="6BD-5Q-j9d" secondAttribute="bottom" constant="20" symbolic="YES" id="DI6-cs-wl7"/>
                             <constraint firstItem="DBb-Ln-kL2" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="top" id="E7P-Ns-ZKn"/>
                             <constraint firstAttribute="centerX" secondItem="bwC-zC-Pjr" secondAttribute="centerX" id="QRB-lz-Tbt"/>
                             <constraint firstItem="zVL-7N-m99" firstAttribute="top" secondItem="DBb-Ln-kL2" secondAttribute="bottom" id="aOw-L3-Pgt"/>
-                            <constraint firstItem="aiD-60-ouU" firstAttribute="top" secondItem="6BD-5Q-j9d" secondAttribute="bottom" id="nCw-HO-uzG"/>
+                            <constraint firstAttribute="centerX" secondItem="RmI-pd-8Y7" secondAttribute="centerX" id="dkq-af-VHj"/>
                             <constraint firstAttribute="centerX" secondItem="aiD-60-ouU" secondAttribute="centerX" id="oc4-X5-bB6"/>
+                            <constraint firstItem="aiD-60-ouU" firstAttribute="top" secondItem="RmI-pd-8Y7" secondAttribute="bottom" constant="8" id="p2d-05-BUg"/>
                             <constraint firstItem="DBb-Ln-kL2" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" id="vIc-lu-Qno"/>
                         </constraints>
                     </view>
