--- a/ch8/HeavyRotation/HeavyRotation/HeavyViewController.xib
+++ b/ch8/HeavyRotation/HeavyRotation/HeavyViewController.xib
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="4469" systemVersion="13A476u" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="4514" systemVersion="13A603" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3694"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="HeavyViewController">
@@ -11,11 +11,53 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="1">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eE9-TA-JB6">
+                    <rect key="frame" x="20" y="430" width="46" height="30"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <state key="normal" title="Button">
+                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
+                </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hb7-ub-QJC">
+                    <rect key="frame" x="254" y="430" width="46" height="30"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <state key="normal" title="Button">
+                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
+                </button>
+                <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="osr-Hw-8EN">
+                    <rect key="frame" x="18" y="20" width="284" height="34"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                </slider>
+                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="475" image="joeeye.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="smS-SR-FSO">
+                    <rect key="frame" x="20" y="61" width="280" height="361"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                </imageView>
+            </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstAttribute="bottom" secondItem="eE9-TA-JB6" secondAttribute="bottom" constant="20" id="BHc-Ct-YPI"/>
+                <constraint firstItem="osr-Hw-8EN" firstAttribute="top" secondItem="1" secondAttribute="top" constant="20" id="DYR-yv-Dwt"/>
+                <constraint firstItem="smS-SR-FSO" firstAttribute="top" secondItem="osr-Hw-8EN" secondAttribute="bottom" constant="8" id="E0B-Mc-PyC"/>
+                <constraint firstItem="eE9-TA-JB6" firstAttribute="top" secondItem="smS-SR-FSO" secondAttribute="bottom" constant="8" id="NON-h9-56A"/>
+                <constraint firstItem="eE9-TA-JB6" firstAttribute="leading" secondItem="1" secondAttribute="leading" constant="20" id="NSa-zf-JlB"/>
+                <constraint firstAttribute="bottom" secondItem="Hb7-ub-QJC" secondAttribute="bottom" constant="20" id="WnO-eZ-Ka0"/>
+                <constraint firstAttribute="trailing" secondItem="osr-Hw-8EN" secondAttribute="trailing" constant="20" id="fjq-en-CLD"/>
+                <constraint firstItem="Hb7-ub-QJC" firstAttribute="top" secondItem="smS-SR-FSO" secondAttribute="bottom" constant="8" id="j6d-d7-pqr"/>
+                <constraint firstAttribute="trailing" secondItem="Hb7-ub-QJC" secondAttribute="trailing" constant="20" id="kE8-Rb-gB5"/>
+                <constraint firstAttribute="trailing" secondItem="smS-SR-FSO" secondAttribute="trailing" constant="20" id="npo-Ke-XoX"/>
+                <constraint firstItem="smS-SR-FSO" firstAttribute="leading" secondItem="1" secondAttribute="leading" constant="20" id="p3I-ed-C97"/>
+                <constraint firstItem="osr-Hw-8EN" firstAttribute="leading" secondItem="1" secondAttribute="leading" constant="20" id="x7u-MY-wBp"/>
+            </constraints>
             <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
-            <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+            <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
         </view>
     </objects>
+    <resources>
+        <image name="joeeye.jpg" width="437" height="437"/>
+    </resources>
 </document>
