--- a/ch11/Homepwner/Homepwner/Storyboard.storyboard
+++ b/ch11/Homepwner/Homepwner/Storyboard.storyboard
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13A603" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="0W4-sh-ovG">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13A603" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="zVa-bq-zXG">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
     </dependencies>
     <scenes>
-        <!--Items View Controller-->
+        <!--Items View Controller - Big Nerd Ranch Store-->
         <scene sceneID="Cy2-z7-FgX">
             <objects>
                 <tableViewController id="0W4-sh-ovG" customClass="ItemsViewController" sceneMemberID="viewController">
@@ -13,7 +13,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                         <view key="tableHeaderView" contentMode="scaleToFill" id="jFv-rf-bIE">
-                            <rect key="frame" x="0.0" y="0.0" width="320" height="50"/>
+                            <rect key="frame" x="0.0" y="64" width="320" height="50"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <subviews>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZDG-cR-LmO">
@@ -48,15 +48,15 @@
                             </constraints>
                         </view>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" restorationIdentifier="BNRItemCell" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="BNRItemCell" textLabel="Ajk-RK-exu" style="IBUITableViewCellStyleDefault" id="PqP-zi-1be">
-                                <rect key="frame" x="0.0" y="105" width="320" height="44"/>
+                            <tableViewCell contentMode="scaleToFill" restorationIdentifier="BNRItemCell" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="BNRItemCell" textLabel="Ajk-RK-exu" style="IBUITableViewCellStyleDefault" id="PqP-zi-1be">
+                                <rect key="frame" x="0.0" y="169" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="PqP-zi-1be" id="Chl-Aw-W5t">
-                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="287" height="43"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Ajk-RK-exu">
-                                            <rect key="frame" x="15" y="0.0" width="290" height="43"/>
+                                            <rect key="frame" x="15" y="0.0" width="270" height="43"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -64,6 +64,9 @@
                                         </label>
                                     </subviews>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="wCr-PB-qzm" kind="push" identifier="Show detail view of BNRItem" id="xZz-5s-yRM"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -71,10 +74,119 @@
                             <outlet property="delegate" destination="0W4-sh-ovG" id="ZVI-4J-eTQ"/>
                         </connections>
                     </tableView>
+                    <navigationItem key="navigationItem" title="Big Nerd Ranch Store" id="DbZ-mD-lJo"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="KPh-wP-uPk" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="129" y="21"/>
+            <point key="canvasLocation" x="441" y="110"/>
+        </scene>
+        <!--Item Detail View Controller-->
+        <scene sceneID="Cwe-zS-wh2">
+            <objects>
+                <viewController id="wCr-PB-qzm" customClass="BNRItemDetailViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="0e1-j1-mrd"/>
+                        <viewControllerLayoutGuide type="bottom" id="CAr-8u-hIm"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" horizontalHuggingPriority="252" horizontalCompressionResistancePriority="751" id="WGM-WK-q2H">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" text="Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EAE-8K-Qs6">
+                                <rect key="frame" x="20" y="33" width="46" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Yo9-oe-XmV">
+                                <rect key="frame" x="74" y="28" width="226" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" text="Serial" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JCc-JH-Pdb">
+                                <rect key="frame" x="20" y="71" width="46" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" text="Value" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="In0-WH-or3">
+                                <rect key="frame" x="20" y="108" width="46" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Ztr-Wa-RwU">
+                                <rect key="frame" x="74" y="66" width="226" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="tL2-6i-lGQ">
+                                <rect key="frame" x="74" y="104" width="226" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Creation Date" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g9D-Gs-tYN">
+                                <rect key="frame" x="107" y="142" width="106" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="In0-WH-or3" firstAttribute="leading" secondItem="WGM-WK-q2H" secondAttribute="leading" constant="20" id="0Pl-2Q-Ind"/>
+                            <constraint firstAttribute="trailing" secondItem="Ztr-Wa-RwU" secondAttribute="trailing" constant="20" id="2tN-fj-iSM"/>
+                            <constraint firstItem="Ztr-Wa-RwU" firstAttribute="leading" secondItem="JCc-JH-Pdb" secondAttribute="trailing" priority="999" constant="8" id="3cT-6m-OcG"/>
+                            <constraint firstAttribute="trailing" secondItem="Yo9-oe-XmV" secondAttribute="trailing" constant="20" id="55l-jU-9E0"/>
+                            <constraint firstAttribute="centerX" secondItem="g9D-Gs-tYN" secondAttribute="centerX" id="6VA-Ro-hci"/>
+                            <constraint firstItem="EAE-8K-Qs6" firstAttribute="leading" secondItem="WGM-WK-q2H" secondAttribute="leading" constant="20" id="ITU-jx-7vb"/>
+                            <constraint firstItem="tL2-6i-lGQ" firstAttribute="width" secondItem="Ztr-Wa-RwU" secondAttribute="width" id="MRR-co-ldQ"/>
+                            <constraint firstItem="EAE-8K-Qs6" firstAttribute="centerY" secondItem="Yo9-oe-XmV" secondAttribute="centerY" id="PNb-ld-hjO"/>
+                            <constraint firstItem="Ztr-Wa-RwU" firstAttribute="width" secondItem="Yo9-oe-XmV" secondAttribute="width" id="PrK-xo-gue"/>
+                            <constraint firstItem="In0-WH-or3" firstAttribute="centerY" secondItem="tL2-6i-lGQ" secondAttribute="centerY" constant="-0.5" id="V77-zD-JvQ"/>
+                            <constraint firstItem="g9D-Gs-tYN" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="WGM-WK-q2H" secondAttribute="leading" constant="20" symbolic="YES" id="Xgm-lx-TkR"/>
+                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="g9D-Gs-tYN" secondAttribute="trailing" constant="20" symbolic="YES" id="Y5k-WU-POE"/>
+                            <constraint firstItem="JCc-JH-Pdb" firstAttribute="centerY" secondItem="Ztr-Wa-RwU" secondAttribute="centerY" id="aNB-dU-xFN"/>
+                            <constraint firstItem="Ztr-Wa-RwU" firstAttribute="top" secondItem="Yo9-oe-XmV" secondAttribute="bottom" constant="8" id="auU-Of-Cxm"/>
+                            <constraint firstItem="Yo9-oe-XmV" firstAttribute="leading" secondItem="EAE-8K-Qs6" secondAttribute="trailing" priority="999" constant="8" id="e4f-Xc-wTb"/>
+                            <constraint firstItem="JCc-JH-Pdb" firstAttribute="leading" secondItem="WGM-WK-q2H" secondAttribute="leading" constant="20" id="eVo-Hf-85y"/>
+                            <constraint firstItem="Yo9-oe-XmV" firstAttribute="top" secondItem="0e1-j1-mrd" secondAttribute="bottom" constant="20" symbolic="YES" id="hck-T7-2Mg"/>
+                            <constraint firstItem="tL2-6i-lGQ" firstAttribute="leading" secondItem="In0-WH-or3" secondAttribute="trailing" priority="999" constant="8" id="heU-GT-vyH"/>
+                            <constraint firstItem="tL2-6i-lGQ" firstAttribute="top" secondItem="Ztr-Wa-RwU" secondAttribute="bottom" constant="8" id="nRj-lJ-fTE"/>
+                            <constraint firstAttribute="trailing" secondItem="tL2-6i-lGQ" secondAttribute="trailing" constant="20" id="o7Y-fb-w3E"/>
+                            <constraint firstItem="g9D-Gs-tYN" firstAttribute="top" secondItem="tL2-6i-lGQ" secondAttribute="bottom" constant="8" id="w3b-5A-QE5"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="rMf-3r-eRr"/>
+                    <connections>
+                        <outlet property="creationDateLabel" destination="g9D-Gs-tYN" id="IZv-8R-Ial"/>
+                        <outlet property="nameTextField" destination="Yo9-oe-XmV" id="UZA-Ta-3zv"/>
+                        <outlet property="serialTextField" destination="Ztr-Wa-RwU" id="u3j-cT-lhy"/>
+                        <outlet property="valueTextField" destination="tL2-6i-lGQ" id="tRO-BA-VNv"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="VVt-Ui-sZR" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="816" y="110"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="ngS-OL-Eb7">
+            <objects>
+                <navigationController definesPresentationContext="YES" id="zVa-bq-zXG" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="sl3-oQ-Lyi">
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="0W4-sh-ovG" kind="relationship" relationship="rootViewController" id="cYC-Lb-vAE"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="UJl-np-178" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="0.0" y="110"/>
         </scene>
     </scenes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
